@@ -4,10 +4,10 @@ DIST jack-1.9.10.tar.bz2 6201921 SHA256 5bc6336e6ac9799e3cb241915e2ba5d01b030589
 DIST jack-audio-connection-kit-0.121.3-dbus.patch 337061 SHA256 da12003ed4528a09d8109ecc7e75f539f0173b23832a1d993800473f1f1d25fd SHA512 9be280a24d59d35bab07da75be407f0790fd36657bfb54d24522337f2a2bc15d6e8a9f88347ff3215ed3e6b32ab827c4e203f5435fefe30c456d638169524192 WHIRLPOOL 37b6a58c5103ff23e606e3dfd0b5ec2630b86f88ddb964635050555e64aa4ab687205e8e29add29659f36866d036098bb7d6128e230349adfd096c06cc641709
 DIST jack-audio-connection-kit-0.121.3.tar.gz 1083545 SHA256 b7095d3deabeecd19772b37241e89c6c79de6afd6c031ba7567513cfe51beafa SHA512 57323393d5209baefe73cc0cd9a0e818b1cfd260cf9aa36cd6ad800252e22e3ddb7fc46649c54b8e840696878147c2d06c8d39fd7300b5bb92aeb69f44ed710f WHIRLPOOL a256cfb7c3546cb06d6003313802b02812d8da9c13671be9b0341a10442cd348a8b3f7fe65e8d27cc47b4e29ded799fa6cc0efa51d81d01f342c7c8eefbc9c55
 DIST jack-audio-connection-kit-0.124.1.tar.gz 1113456 SHA256 eb42df6065576f08feeeb60cb9355dce4eb53874534ad71534d7aa31bae561d6 SHA512 9c885da516f2ca246edba94db26c851229d063f1557ea91ec76ca57d675a510d16cc4baad5adb316cf46aaaa8b8d7579b484a53b9a803b34fc9bb34c983a8fe2 WHIRLPOOL 41232400d99a72b29a75f4d781c373a7f453c704a52b0a669cab71296574881b0a99b21b86628d02db8c3d7a64bec6a259ae1ba0a4c721867e19283139cee824
-EBUILD jack-audio-connection-kit-0.121.3-r2.ebuild 3239 SHA256 b953a066c094cdc9378883470d46fc36b2b06d11af30261b204976f539448f0c SHA512 e0d301d03cc46bfb7db58b8fe3ee8dffacdd752504c4067f3f7e0544d56d509ba4a8e99b7b136157790fe1f691e6187cf077581ad5bc5b00d47ed54c958fb33c WHIRLPOOL 5f7d9a6faf0193665e90ed01ed64d91eacedfb933bc8d80b637f80be47726834e3961e6eb03289da20ff70ba13f4bce8dbe4cf1ddfc53e96789eb48bd34c03eb
-EBUILD jack-audio-connection-kit-0.124.1.ebuild 3660 SHA256 059cd9a9a36a6cd7ece4456aa1e562c381158f1ff515f916189986d48c9d26a7 SHA512 15da72f324c50974a5d5ef1e22a99fc59f0ec6ed2ee8606682195af22bb4d19b6681f00ce7c8b466893d19aee2a3cf348fb94a40dff7a1f36eda2a16dc277f3c WHIRLPOOL 545ae26cfd2c25a7249e4a3647da1d1f003ebb2a79e3587f676e3d8f96d4e5b9820fc27c2ed2ea16522f28656376265a9c12ea5c51dbd20b8fa5aafba7f0f841
-EBUILD jack-audio-connection-kit-1.9.10.ebuild 2566 SHA256 68786c79d70b2718fbaf9ba35bad278a7db0ee62b207e6293c9792dfa3f8a39b SHA512 67eea37619a4140daf6f669cec705efb04eed12d86400b4c6817b8c5561aa740352d58e429b327af30efa8e06c140435fd96b23b0b6b703b6a4ac9918a60e409 WHIRLPOOL 685f6dd4d45057edadc23a6d3526736391fd9426f2cb92be2fb71ebb31544844bc622b2a30c86f2399e84f43e3e40372593c8fc49f10cdd39eeb81892f5fc0de
-EBUILD jack-audio-connection-kit-1.9999.ebuild 3570 SHA256 9e20b4b4a6d4ea89c579e63780a213900327a11b37fb18d082e17c6c5cb079fa SHA512 27e5ea763869df00558955901f979f7285ed2b930cd840a191b37ed9ef9b0c5903f9b3ac02bd1136899c004a1f17835980acb74c32553eb291a75edf8706e5d7 WHIRLPOOL 5f88d2e960712861de43fd0cdcf42d67b15cdc832cd829e753d12a57453b13a9028928caa525ffaf798f80c184eeab0f10717796d9b725d2cb17257d0fd8c961
-EBUILD jack-audio-connection-kit-2.9999.ebuild 2815 SHA256 57d295ada3c9d30100938ee423b963ad2eb3e12957481cfb4d26c9101bad67de SHA512 ba75d996cf93a74e14cdfda9f1726f5dd3c06efc76473401c36a146fff2843cce0d25bc032104fade062b3691cbecb3dabe5d67167a70deba2d740a50870fb46 WHIRLPOOL 7d2b00b069da5940559dac5f9fc04a4acae551212be88d8318f91d5364d1a6a8654159de9f83dc7cc1b12810630f2bfa96c4cfa38d55bfb63e6d3694118e57e1
-MISC ChangeLog 17870 SHA256 811b0756daeb87834aca55de03d41f11d7342761a95b2a528202272b3e19be22 SHA512 55dc67ec713c6e0d68cd3f950acf13a5ccc9fbd256f05574ca69b9277527b2b1f2e1b27a78db85d1c848a6b977b110cd35e9e48a5bc03e2a81561fb5f5e4f475 WHIRLPOOL 6c19b378ba698635a4de80b4867e8f558dd26db8931e35cf96810aac6c52addaa9204d9e2948fc59cdfc080fc1af1955e1d80faf2ee4f33cce9e351c6543798a
+EBUILD jack-audio-connection-kit-0.121.3-r2.ebuild 3136 SHA256 94a68ec2a88bb4fc1c4913eec5b6ba829c50df04614f6f859563e8dcf23c1b98 SHA512 79783b09e8b603c04891bba03bd4f8d841e53188a2cbafc20a1d9d5d654e28565863ff7a31616d8fe01ae808116474ff65679a9393df8c9db42c6469e729f224 WHIRLPOOL 1ac0fce56194a16283c7d47f5d3920365fbe56f92fa387163358ee3e5d7b6dcbf294784f15d90e1ed84c6bc9a9a44d3635b413d7f4f9a4fc80153b81c6b281d5
+EBUILD jack-audio-connection-kit-0.124.1.ebuild 3557 SHA256 688fef6dc3bb8762f7a15fe0006806de2e6aabf24853e64ead102593b3d44c1c SHA512 a881e52f6215cc8c2cfedbe5355c7b30ca0a24b7fbb7bb82b993a8c846eef49bd72321b4a613d30ece01c80b1a001e5bb5430380f1d8785605e61245e9835e68 WHIRLPOOL d3e26b426f0d3a0d3dfcd74d299f9197823a023cb27a002e4d145ec793e1881895232eed4f6b8d3a0841189b1fcd277b2251d15175857a851c9aaeef5c952f2e
+EBUILD jack-audio-connection-kit-1.9.10.ebuild 2463 SHA256 f154cac5b6f8ca95aed7fe7113f6e12d17ed1684fc754393ca2e6758d3c8a54a SHA512 f9ac80d8fa625db7408d2415e9cc309a83b7f090cac5623918afb85e3d11fe78f1d9e91ec004639a2d1c6ccfe10962c8c29ac32309a839be1d3b1847dee2117a WHIRLPOOL 553d61e47918a355525ce918cb8093091200acc35d324445a67d3eec53e3120479ac8f538aafa3a87d1de8071104285422d4ff58440530e0bdb7365f100be878
+EBUILD jack-audio-connection-kit-1.9999.ebuild 3467 SHA256 55714b9a089ae121953edf2f6341d3ca95fce3d3ae7a1ed53f10034fb4252430 SHA512 7550524f5b6623f1998572c0f8d7d9b5f3abb5222015e0c0645dad8a63216ff95729a7873dd73f0f8e587eae7509780e3677e23b93e7c2df9a9650dfd4b36087 WHIRLPOOL 5cc7df386f2f2bf13a93557ccf2f5f4d019be1853840dfb9e19d7de1c77f886ea99a9c998139123d42b50349b25421b24188c58b14ae76686c6d638dae48d586
+EBUILD jack-audio-connection-kit-2.9999.ebuild 2712 SHA256 321fda0f6342835dc142f366a6779b396bb1045f58be4e83369ee9685b793111 SHA512 71eca2417fbe8d50754781e9b406aa360b80a3c2982f56d7da86b161f7fd651e9250b73a9569317936c91d40c00ce5124bb298d3e9883e2600deae5993393de1 WHIRLPOOL 17c98fe9ce90ed7ffd7fb1e7935c318bc13577f2baa695942b618cc120c8ea151106efc32d50ecfdf10c9f2e9d1be5412432280900948edcd8e0e2320a3fd59c
+MISC ChangeLog 18176 SHA256 6629d62d5f7e915f869dd01b589b098e2162738c2b870cd022e9f9ab1e8dc44a SHA512 ad79a711cf178fd6609b4d7dcfcc284c12dd00e8f89026938d728dffaf0507398643f48c089f22a31a36e4d2760f06a8a5c11cbefd0f17edef3d781b72e473bc WHIRLPOOL a65e04ec4eb4aa82d189995989628ba72b6d92b1b019d5506dbab28f1d217a4b58961cfadf823ef8aac120dec4c62fb70b07095e3fae9161d077276cb9960901
 MISC metadata.xml 893 SHA256 ee04698dfbde7b9b1141f56e518821962ef104cd27b93d6e2b8efa73e458c563 SHA512 d0d867ab465bf31e4216eb5fdd7f7cf607cf61297bf8de8def0daebacb5d0ce9ca80fed56d9ba4c0bae6b8b157d39416746749e4257a39fc70d7a046e85e8b85 WHIRLPOOL 59b8dfc4436af903ca30b11f0a96439a6558283a589ba2a6eb78fa5749cef30cd8121cc4f5a383b73ef07a22fadd3d4987b33491d9d85398a073a271bda8b47b
