@@ -27,10 +27,6 @@ IUSE="alsa celt dbus doc ieee1394 libsamplerate opus pam readline sndfile"
 
 REQUIRED_USE="${PYTHON_REQUIRED_USE}"
 
-# FIXME: multilib libffado
-REQUIRED_USE="${REQUIRED_USE} amd64? ( abi_x86_32? ( !ieee1394 ) )"
-
-# FIXME: multilib libffado
 CDEPEND="${PYTHON_DEPS}
 	alsa? ( media-libs/alsa-lib[${MULTILIB_USEDEP}] )
 	celt? ( media-libs/celt:0[${MULTILIB_USEDEP}] )
@@ -38,7 +34,7 @@ CDEPEND="${PYTHON_DEPS}
 		dev-libs/expat[${MULTILIB_USEDEP}]
 		sys-apps/dbus[${MULTILIB_USEDEP}]
 	)
-	ieee1394? ( media-libs/libffado )
+	ieee1394? ( media-libs/libffado[${MULTILIB_USEDEP}] )
 	libsamplerate? ( media-libs/libsamplerate[${MULTILIB_USEDEP}] )
 	opus? ( media-libs/opus[custom-modes,${MULTILIB_USEDEP}] )
 	readline? ( sys-libs/readline:0 )
